# cd-rw-52x

./: TASKS.md  main.py  pyproject.toml
cdrw/: __main__.py  cli.py  fuzzy.py  git_info.py  history.py  install.py  relative_time.py  tui.py
tests/: test_e2e.py  test_fuzzy.py  test_git_info.py  test_history.py  test_relative_time.py  test_tui.py
