[project]
name = "cd-rw-52x"
version = "0.2.0"
description = "CLI tool for jumping between git projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cdrw = "cdrw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cdrw"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
